--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -164,7 +164,7 @@ jobs:
         do
           mkdir build-$ARCH
           cd build-$ARCH
-          ../frida/configure --host=$ARCH --with-devkits=core
+          ../frida/configure --host=$ARCH -Dfrida-core:devkits=core
           make
           cd ..
         done
@@ -226,10 +226,10 @@ jobs:
         gzip build-android-x86_64/subprojects/frida-gum/bindings/gumjs/libfrida-gumjs-1.0.a
         
         # Package frida-core devkits
-        tar -czf florida-core-devkit-android-arm.tar.gz -C build-android-arm/subprojects/frida-core/src/devkit .
-        tar -czf florida-core-devkit-android-arm64.tar.gz -C build-android-arm64/subprojects/frida-core/src/devkit .
-        tar -czf florida-core-devkit-android-x86.tar.gz -C build-android-x86/subprojects/frida-core/src/devkit .
-        tar -czf florida-core-devkit-android-x86_64.tar.gz -C build-android-x86_64/subprojects/frida-core/src/devkit .
+        tar -czf florida-core-devkit-android-arm.tar.gz -C build-android-arm/lib/frida/devkits/core .
+        tar -czf florida-core-devkit-android-arm64.tar.gz -C build-android-arm64/lib/frida/devkits/core .
+        tar -czf florida-core-devkit-android-x86.tar.gz -C build-android-x86/lib/frida/devkits/core .
+        tar -czf florida-core-devkit-android-x86_64.tar.gz -C build-android-x86_64/lib/frida/devkits/core .
         
 
     - name: Upload android arm frida-server for Florida
